[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testup-ai-driver"
version = "0.2.0"
description = "AI-driven tool to automate website testing through Selenium"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thetaris GmbH", email = "info@testup.io"}
]
keywords = ["selenium", "ai", "testing", "automation", "web-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers"
]
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.0.0",
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "beautifulsoup4>=4.10.0",
    "requests>=2.25.0"
    "webdriver-manager>=3.4.2",
    "flask>=2.0.0",
    "requests>=2.25.0",
    "markdownify>=0.11.0",
    "cachetools>=4.0.0",
    "tiktoken>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8"
]

[project.urls]
Homepage = "https://github.com/yourusername/testup-ai-driver"
Repository = "https://github.com/yourusername/testup-ai-driver"
Documentation = "https://github.com/yourusername/testup-ai-driver#readme"
"Bug Tracker" = "https://github.com/yourusername/testup-ai-driver/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
